# neomorphus

./: Makefile  README.md  pyproject.toml
.task/: plan.md  result.md  spec.md  task.md
integration_tests/custom_workflow/: app.py  test.py
integration_tests/custom_workflow/.neo/default/: workflow.py
integration_tests/multi_workflow/: app.py  test.py
integration_tests/multi_workflow/.neo/alpha/: workflow.py
integration_tests/multi_workflow/.neo/alpha/actions/: go_alpha.md
integration_tests/multi_workflow/.neo/beta/: workflow.py
integration_tests/multi_workflow/.neo/beta/actions/: go_beta.md
src/neomorphus/: __init__.py  _actions.py  _cli.py  _git.py  _run.py  _workflow.py  default_workflow.py  git.py  run.py  status.py  workflow.py
src/neomorphus/actions/: __init__.py  evolve.py  implement.py  init.py  plan.py  select.py  select_plan.py
src/neomorphus/prompts/: evolve.md  evolve_interactive.md  implement.md  init.md  plan.md  select_plan.md
src/neomorphus/workflows/bug/: __init__.py
src/neomorphus/workflows/bug/actions/: 01-research.md  02-plan.md  03-implement.md  (+1 more)
src/neomorphus/workflows/bug_fix/: __init__.py
src/neomorphus/workflows/bugbash/: __init__.py
src/neomorphus/workflows/default/: __init__.py
src/neomorphus/workflows/feature/: __init__.py
src/neomorphus/workflows/refactor/: __init__.py
src/neomorphus/workflows/review/: __init__.py
tests/: conftest.py  fake_claude.py  fake_claude_slow.py  test_integration.py  test_run.py  test_signal.py  test_status.py  test_workflow.py
tests/fixtures/draft_workflow/.neo/: workflow.py
(+19 files in other folders)
