[project]
name = "neomorphus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dan Davison", email = "dandavison7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["click>=8"]

[project.scripts]
neomorphus = "neomorphus:main"
neo = "neomorphus:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.9"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 99
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
